--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-click==8.0.3
-dlib==19.22.1
-face-recognition==1.3.0
-face-recognition-models==0.3.0
+face_recognition==1.3.0
 Flask==2.0.2
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
 numpy==1.21.4
-opencv-contrib-python==4.5.4.58
+opencv_contrib_python==4.5.4.58
 Pillow==8.4.0
 pygame==2.1.0
-Werkzeug==2.0.2
 gunicorn
-uwsgi
